# MnB2-Bannerlord-CommunityPatch

./: .editorconfig  .gitattributes  .gitignore  .lfsconfig  Directory.Build.props  LICENSE  README.md  SubModule.xml
.github/workflows/: mirroring.yml
ModuleData/Languages/: community_patch_options.xml
src/CommunityPatch/: .editorconfig  ApplicationVersionComparer.cs  ApplicationVersionTypeComparer.cs  AssemblyAttributes.cs  CallStackHelpers.cs  ClanHelpers.cs  CommunityPatch.csproj  CommunityPatch.csproj.DotSettings  CommunityPatch.sln  CommunityPatch.sln.DotSettings  CommunityPatchOptionsFile.cs  CommunityPatchSubModule.CopyDiagnosticsToClipboard.cs  CommunityPatchSubModule.Initialization.cs  CommunityPatchSubModule.Logging.cs  CommunityPatchSubModule.Options.cs  CommunityPatchSubModule.Patching.cs  CommunityPatchSubModule.Versioning.cs  CommunityPatchSubModule.cs  ContractAnnotationAttribute.cs  DataHelpers.cs  Diagnostics.cs  Dynamic.cs  FieldRef.cs  FloatHelper.cs  HarmonyHelpers.cs  IPatch.cs  IgnoresAccessChecksTo.cs  LocalizationHelpers.cs  LootCollectorHelper.cs  MenuCleaner.cs  MethodHelpers.cs  MobilePartyHelper.cs  ModuleInitializer.cs  OptionsFile.cs  PatchApplicabilityHelper.cs  PatchBase.cs  PatchNotBeforeAttribute.cs  PatchObsoleteAttribute.cs  PathHelpers.cs  PerkObjectExtensions.cs  (+9 more)
tools/Antijank/: Antijank.csproj  (+46 more)
tools/AntijankProfiler/: .clang-format  AntijankProfiler.cpp  AntijankProfiler.def  AntijankProfiler.h  AntijankProfilerClassFactory.cpp  AntijankProfilerClassFactory.h  CMakeLists.txt  Plumbing.cpp  Plumbing.h  hashes.h  pair_hash.h
(+986 files in other folders)
